--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -10,6 +10,6 @@
         This is our first Django application!
         </p>
 
-        Create by janamha@bu.edu
+        <hr> Create by janamha@bu.edu
     </body>
 </html>
