--- a/pages/templates/pages/schedule.html
+++ b/pages/templates/pages/schedule.html
@@ -5,5 +5,9 @@
         <title>Schedule Page</title>
     </head>
     <body>
+        <h1>Hello, World!</h1>
+        <p>
+        This is where we will be placing our scheduling.
+        </p>
     </body>
 </html>
