Assignment 15 update of templates

--- a/pages/templates/pages/about.html
+++ b/pages/templates/pages/about.html
@@ -1,16 +1,11 @@
 <!-- pages/about.html -->
+{% extends 'pages/base.html' %}
 
-<html>
-    <head>
-        <title>About Page</title>
-    </head>
-    <body>
-    <h1>About this page</h1>
-    <p>
-     This is our about page!
-    </p>
-    <hr>
-    This page was brought to you by janamha@bu.edu.
+{% block content %}
 
-    </body>
-</html>
+<h1>About this page</h1>
+<p>
+This is our about page!
+</p>
+
+{% endblock %}
