--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -1,13 +1,14 @@
 <!-- pages/home.html -->
+{% extends 'pages/base.html' %}
 
-<html>
-    <head>
-        <title>Home Page</title>
-    </head>
-    <body>
-        <h1>Hello, World!</h1>
-        <p>
-        This is our first Django application!
-        </p>
-    </body>
-</html>
+<!-- replace the block content section from the base.html page
+with this more specific version 
+-->
+{% block content %}
+
+<h1>Hello, world!</h1>
+<p>
+This is our first Django web application!
+</p>
+
+{% endblock %}
