--- a/pages/templates/pages/schedule.html
+++ b/pages/templates/pages/schedule.html
@@ -1,13 +1,16 @@
 <!-- pages/schedule.html -->
+{% extends 'pages/base.html' %}
 
-<html>
-    <head>
-        <title>Schedule Page</title>
-    </head>
-    <body>
-        <h1>Hello, World!</h1>
-        <p>
-        This is where we will be placing our scheduling.
-        </p>
-    </body>
-</html>
+{% block content %}
+
+<h1>Schedule</h1>
+<p>
+We meet at Natick Common:
+<ul>
+    <li>Monday, Wednesday, and Friday at 5am</li>
+    <li>Saturday and Sunday at 6am</li>
+</ul>
+
+</p>
+
+{% endblock %}
