Added views and template for mini_fb

--- a/mini_fb/templates/mini_fb/show_all_profiles.html
+++ b/mini_fb/templates/mini_fb/show_all_profiles.html
@@ -1,4 +1,10 @@
-<!-- templates/show_all_profiles.html -->
+<!--
+# File: templates/show_all_profiles.html
+# your name: Jana Mikaela Aguilar
+# your email: janamha@bu.edu
+# Description: Write html code this to create a list of profiles
+-->
+
 <h1>MiniFacebook</h1>
 <h2>Showing all Profiles</h2>
 <ul>
@@ -11,7 +17,7 @@
         </colgroup>
         <tr>
             <th><h3>Name</h3></th>
-            <th><h3>Hometown</h3></th>
+            <th><h3>City</h3></th>
             <th><h3>Email</h3></th>
             <th><h3>Image</h3></th>
         </tr>
