--- a/mini_fb/templates/mini_fb/show_all_profiles.html
+++ b/mini_fb/templates/mini_fb/show_all_profiles.html
@@ -4,7 +4,9 @@
 # your email: janamha@bu.edu
 # Description: Write html code this to create a list of profiles
 -->
+{% extends 'mini_fb/base.html' %}
 
+{% block content %}
 <h1>MiniFacebook</h1>
 <h2>Showing all Profiles</h2>
 <ul>
@@ -24,7 +26,7 @@
         {% for profile in profiles %}
             <tr>
                 <td>
-                    {{profile.first_name}} {{profile.last_name}}<br>
+                    <h3><a href="{% url 'show_profile_page' profile.pk %}">{{profile.first_name}} {{profile.last_name}}<br></a></h3>
                 </td>
                 <td>
                     {{profile.city}}
@@ -41,3 +43,5 @@
         {% endfor %}
     </table> 
 </ul>
+
+{% endblock %}
