--- a/mini_fb/templates/mini_fb/show_profile_page.html
+++ b/mini_fb/templates/mini_fb/show_profile_page.html
@@ -10,7 +10,31 @@
 <center>
     <h1>{{profile.first_name}} {{profile.last_name}}<br></h1>
     <img src="{{profile.image_url}}" style="max-width: 400;"><br>
-    {{profile.email}} <br>
-    {{profile.city}}
 </center>
+{{profile.email}} <br>
+{{profile.city}} <br>
+<br>
+<h2>Status Messages</h2> <br>
+
+<table>
+    <colgroup>
+        <col span="1" style="width: 15%">
+        <col span="1" style="width: 15%">
+    </colgroup>
+    <tr>
+        <th><h3>Timestamp</h3></th>
+        <th><h3>Message</h3></th>
+    </tr>
+    {% for m in profile.get_status_messages %}
+        <tr>
+            <td>
+                {{m.timestamp}}
+            </td>
+            <td>
+                {{m.message}}
+            </td>
+        </tr>
+    {% endfor %}
+</table> 
+
 {% endblock %}
