--- a/quotes/templates/quotes/home.html
+++ b/quotes/templates/quotes/home.html
@@ -1,9 +1,20 @@
-<!-- templates/home.html -->
+<!-- quotes/home.html -->
 
+{% extends 'quotes/base.html' %}
+
+{% block content %}
+<h1>Showing All Quotes</h1>
+
+
+<!-- create a loop to display the quotes-->
 <ul>
-    {% for quote in quotes %}
-    <li>"{{quote.text}}" - {{quote.person}}<br>
+{% for quote in quotes %}
+    <li>{{quote.text}} - {{quote.person}}<br>
         <img src="{{quote.person.get_random_image}}" style="max-width: 400;">
+
     </li>
-    {% endfor %}
+
+{% endfor %}
 </ul>
+
+{% endblock %}
