--- a/mini_fb/templates/mini_fb/base.html
+++ b/mini_fb/templates/mini_fb/base.html
@@ -6,18 +6,19 @@
 HTML tag for general formatting
 -->
 
+<!-- quotes/base.html -->
 <html>
     <head>
         <title>Mini Facebook</title>
     </head>
     <body>
-    <!-- navigation links -->
     <header>
-        <a href="{% url 'show_all_profiles' %}">Home</a> |
+        <a href="{% url 'show_all_profiles' %}">Show All Profiles</a> |
+        <a href="{% url 'create_profile' %}">Create New Profile</a> |
     </header>
-    <!-- this content block will be filled in by another template 
-        which extends this base.html page. -->
+    <hr>
+
     {% block content %}
     {% endblock %}
-    
+    </body>
 </html>
