--- a/mini_fb/templates/mini_fb/show_profile_page.html
+++ b/mini_fb/templates/mini_fb/show_profile_page.html
@@ -10,6 +10,7 @@
 <center>
     <h1>{{profile.first_name}} {{profile.last_name}}<br></h1>
     <img src="{{profile.image_url}}" style="max-width: 400;"><br>
+    <h4><a href="{% url 'update_profile' profile.pk %}">Update this profile</a></h4>
 </center>
 {{profile.email}} <br>
 {{profile.city}} <br>
