Fixed descriptions and file headers

--- a/mini_fb/templates/mini_fb/update_profile_form.html
+++ b/mini_fb/templates/mini_fb/update_profile_form.html
@@ -1,4 +1,9 @@
-<!-- templates/quotes/update_quote_form.html -->
+<!--
+# File: templates/quotes/update_quote_form.html
+# your name: Jana Mikaela Aguilar
+# your email: janamha@bu.edu
+# Description: Write html code for when editing a profile
+-->
 
 {% extends 'mini_fb/base.html' %}
 
