--- a/mini_fb/templates/mini_fb/show_profile_page.html
+++ b/mini_fb/templates/mini_fb/show_profile_page.html
@@ -32,7 +32,13 @@
                 {{m.timestamp}}
             </td>
             <td>
+                {% if m.image %}
+                <img src='{{m.image.url}}' style='max-width: 200;'>
+                {% endif %}
                 {{m.message}}
+            </td>
+            <td>
+                <a href="{% url 'delete_status' profile_pk=profile.pk status_pk=m.pk %}">Delete</a> |
             </td>
         </tr>
     {% endfor %}
@@ -40,7 +46,9 @@
 
 <h3>Create Status Message</h3>
 
-<form method="POST" action='{% url "post_status" profile.pk %}' > <!-- HTTP POST to send data to the server -->
+<form method="POST" action="/mini_fb/profile/{{profile.pk}}/post_status" 
+enctype="multipart/form-data">
+    <!-- HTTP POST to send data to the server -->
     {% csrf_token %}
     
     <table>
