Added links for profile names

--- a/mini_fb/templates/mini_fb/base.html
+++ b/mini_fb/templates/mini_fb/base.html
@@ -20,4 +20,5 @@ HTML tag for general formatting
     {% block content %}
     {% endblock %}
     </body>
+    <hr> Created by Jana Aguilar (janamha@bu.edu)
 </html>
