--- a/mini_fb/templates/mini_fb/show_news_feed.html
+++ b/mini_fb/templates/mini_fb/show_news_feed.html
@@ -7,6 +7,8 @@
 {% extends 'mini_fb/base.html' %}
 
 {% block content %}
+
+<a href="{% url 'show_profile_page' pk=profile.pk %}">Back to {{profile.first_name}}'s Profile</a> 
 <h2>News Feed</h2>
 <table>
     <colgroup>
@@ -19,7 +21,7 @@
                 {{m.timestamp}}
             </td>
             <td>
-                {{m.profile}}
+                <a href="{% url 'show_profile_page' pk=m.profile.pk %}">{{m.profile.first_name}} {{m.profile.last_name}}</a>
             </td>
             <td>
                 {% if m.image %}
