--- a/mini_fb/templates/mini_fb/show_possible_friends.html
+++ b/mini_fb/templates/mini_fb/show_possible_friends.html
@@ -8,6 +8,9 @@
 {% extends 'mini_fb/base.html' %}
 
 {% block content %}
+
+<a href="{% url 'show_profile_page' pk=profile.pk %}">Back to {{profile.first_name}}'s Profile</a> 
+
 <h2>Find Friends</h2>
 <table>
     <colgroup>
@@ -20,7 +23,7 @@
                 <img src='{{f.image_url}}' style='max-width: 200;'>
             </td>
             <td>
-                {{f.first_name}} {{f.last_name}}
+                <a href="{% url 'show_profile_page' pk=f.pk %}">{{f.first_name}} {{f.last_name}}</a>
             </td>
             <td>             
                 <form method="POST" action="{% url 'add_friend' profile_pk=profile.pk friend_pk=f.pk %}" enctype="multipart/form-data">
