Fixed suggestion model

--- a/project/templates/project/home.html
+++ b/project/templates/project/home.html
@@ -28,9 +28,9 @@
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.643703576121!2d-71.10675812024104!3d42.35011914382402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e379f066b975f7%3A0xa5830d724a9e1224!2sTsai%20Performance%20Center!5e0!3m2!1sen!2sus!4v1651536194411!5m2!1sen!2sus" width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 <br>
+<br>
 
-
-<h5 style="color: azure;">Wanna see your favorite ballet next year? Leave a suggestion!</h5>
+<h5 align="left" style="color: azure;">Wanna see your favorite ballet next year? Leave a suggestion!</h5>
 
 <form method="POST" action="/project/submit_suggestion" 
 enctype="multipart/form-data">
